fix spacing of modal title bar

--- a/src/css/ProjectModal.css
+++ b/src/css/ProjectModal.css
@@ -35,21 +35,33 @@
 .ui-widget-header {
   grid-area: modalTitleBox !important;
   display: grid !important;
-  grid-template-columns: 25px 135px 130px 160px !important;
-  grid-template-areas: ' modalCloseBox paddingLinesLeft modalTitle paddingLinesRight';
+  grid-template-columns: 25px 2fr 1fr 2fr 25px !important;
+  grid-template-rows: 4px 18px 4px;
+  grid-template-areas: ' modalCloseBox  .............  modalTitle  ........... .......... '
+                       ' modalCloseBox paddingLinesLeft modalTitle paddingLinesRight .... '
+                       ' modalCloseBox  .............  modalTitle  ........... .........  ';
   background: #FFFFFF !important;
 }
 
-.ui-widget-header::before {
+.ui-widget-header::before, .ui-helper-clearfix::before {
  content: "" !important;
- background: linear-gradient(to bottom, #f6f7f9 0%, #ebedf0 100%) !important;
+ background-image: linear-gradient(to bottom,#232d2d, #232d2d 50%, #FFFFFF, #FFFFFF 50%) !important;
+ background-size: 100% 2px !important;
+ background-position: top 2px bottom 2px !important;
  grid-area: paddingLinesLeft !important;
+ display: flex !important;
+ flex-direction: row !important;
+ /*flex-shrink:125px;*/
 }
 
-.ui-widget-header::after {
+.ui-widget-header::after, .ui-helper-clearfix::after {
  content: "" !important;
- background: linear-gradient(to bottom, #f6f7f9 0%, #ebedf0 100%) !important;
+ background-image: linear-gradient(to bottom,#232d2d, #232d2d 50%, #FFFFFF, #FFFFFF 50%) !important;
+ background-size: 100% 2px !important;
  grid-area: paddingLinesRight !important;
+ display: flex !important;
+ flex-direction: row !important;
+ /*flex-shrink: 125px;*/
 }
 
 .ui-dialog-titlebar-close {
@@ -58,17 +70,28 @@
 
 .ui-dialog-title {
   grid-area: modalTitle !important;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+  padding-right: 8px;
+  padding-left: 8px;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: space-around !important;
+  /*flex-grow: 140px !important;*/
 }
 
 .ui-dialog-content {
   grid-area: modalContent !important;
+  display: grid;
+  height: 420px;
 }
 
 .ui-dialog-footer {
   grid-area: modalButtons !important;
+}
+
+.buttonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .ui-dialog.ui-widget .ui-dialog-titlebar {
@@ -85,9 +108,12 @@
     border-radius: 4px !important;
     color: #232d2d !important;
     background: #FFFFFF !important;
-    -webkit-transition: border .2s;
-    -o-transition: border .2s;
-    transition: border .2s;
+    -webkit-transition: background .2s;
+    -o-transition: background .2s;
+    transition: background .2s;
+    -webkit-transition: color .2s;
+    -o-transition: color .2s;
+    transition: color .2s;
 }
 
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button {
@@ -99,7 +125,8 @@
 .ui-button:enabled:hover,
 .ui-fileupload-choose:not(.ui-state-disabled):hover {
   outline: 0 none;
-  border: 2px solid #232d2d !important;
+  color: #FFFFFF !important;
+  background: #232d2d !important;
 }
 
 .ui-widget-content {
